fixed issue with folder text not being aligned

--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -683,7 +683,6 @@ main {
 .folder-icon-structure {
   display: flex;
   flex-direction: column;
-  align-items: center;
   color: #FFFFFF;
   cursor: default;
   padding: 5px;
@@ -695,12 +694,13 @@ main {
 #folder-icon-image {
   height: 5rem;
   width: 5rem;
-  object-fit: contain;
+  object-fit:contain;
 }
 #folder-icon-text {
   width: 5rem;
   overflow: hidden;
   text-overflow: ellipsis;
+  text-align: center;
   white-space: nowrap;
 }
 #light .folder-icon-structure {
